# Media-Library

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  note  schizzo_relazione.txt
.github/workflows/: blank.yml
src/: .clang-tidy  MediaLibrary.pro  StringUtils.h  config.txt  database_test.json  database_test.xml  main.cpp  output.json  output.xml  resources.qrc  src  src.pro
src/GUI/: AbstractSearchWidget.h  ClickableFrame.cpp  ClickableFrame.h  DatabaseSelectionWidget.cpp  DatabaseSelectionWidget.h  IMediaWidgetVisitor.h  MainWindow.cpp  MainWindow.h  PreviewVisitor.cpp  PreviewVisitor.h  SlidingStackedWidget.cpp  SlidingStackedWidget.h  StreamServices.h  StreamingServices.h
src/GUI/AddMediaView/: AddMediaViewPage.cpp  AddMediaViewPage.h
src/GUI/AdvancedSearch/: AdvancedSearchInputWidget.cpp  AdvancedSearchInputWidget.h  AdvancedSearchResultVisitor.cpp  AdvancedSearchResultVisitor.h  AdvancedSearchResultsWidget.cpp  AdvancedSearchResultsWidget.h  AlbumInputWidget.cpp  AlbumInputWidget.h  AudioBookInputWidget.cpp  AudioBookInputWidget.h  ClickableFrame.cpp  ClickableFrame.h  EbookInputWidget.cpp  EbookInputWidget.h  IMediaInputWidget.h  ISubtypeInputWidget.h  InputWidget.cpp  InputWidget.h  MainWidget.cpp  MainWidget.h  MediaInputVisitor.cpp  MediaInputVisitor.h  MediaInputWidget.cpp  MediaInputWidget.h  MovieInputWidget.cpp  MovieInputWidget.h  NovelInputWidget.cpp  NovelInputWidget.h  ResultVisitor.cpp  ResultVisitor.h  ResultsWidget.cpp  ResultsWidget.h  SeriesInputWidget.cpp  SeriesInputWidget.h  SubtypeInputWidget.h  TypeInputBuilder.cpp  TypeInputBuilder.h  TypeSelector.cpp  TypeSelector.h  database_test.xml
src/GUI/DetailView/: AlbumDetailWidget.cpp  AlbumDetailWidget.h  AudioBookDetailWidget.cpp  AudioBookDetailWidget.h  EbookDetailWidget.cpp  EbookDetailWidget.h  IMediaDetailWidget.h  MediaDetailPage.cpp  MediaDetailPage.h  MediaDetailWidget.cpp  MediaDetailWidget.h  MovieDetailWidget.cpp  MovieDetailWidget.h  NovelDetailWidget.cpp  NovelDetailWidget.h  SeriesDetailWidget.cpp  SeriesDetailWidget.h
src/GUI/EditView/: AlbumEditWidget.cpp  AlbumEditWidget.h  AudioBookEditWidget.cpp  AudioBookEditWidget.h  EbookEditWidget.cpp  EbookEditWidget.h  IMediaEditWidget.h  MediaEditPage.cpp  MediaEditPage.h  MediaEditWidget.cpp  MediaEditWidget.h  MovieEditWidget.cpp  MovieEditWidget.h  NovelEditWidget.cpp  NovelEditWidget.h  SeriesEditWidget.cpp  SeriesEditWidget.h
src/GUI/Search/: GridResults.cpp  GridResults.h  InputBar.cpp  InputBar.h  SearchMain.cpp  SearchMain.h  SearchWidget.cpp  SearchWidget.h  SelectedEdit.cpp  SelectedEdit.h  (+4 more)
src/Media/: Album.cpp  Album.h  AudioBook.cpp  AudioBook.h  Audiolibro.cpp  Audiolibro.h  Ebook.cpp  Ebook.h  IConstMediaVisitor.h  IMedia.h  IMediaVisitor.h  Media.cpp  Media.h  Movie.cpp  Movie.h  Novel.cpp  Novel.h  Romanzo.cpp  Romanzo.h  Series.cpp  Series.h  StringUtils.h
src/Memory/: Database.cpp  Database.h  Deserializer.h  FileManager.cpp  FileManager.h  MediaContainer.cpp  MediaContainer.h  MediaJSONVisitor.cpp  MediaJSONVisitor.h  MediaXMLVisitor.cpp  MediaXMLVisitor.h  Serializer.cpp  Serializer.h
src/assets/: style.qss
tmp/: MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  Profile.cpp  Profile.h  ProfileButton.cpp  ProfileButton.h  SlidingStackedWidget.pro  main.cpp
